Fix spacing on user form

--- a/src/App.scss
+++ b/src/App.scss
@@ -265,6 +265,7 @@ body {
 
     @media (max-width: 700px) {
       height: 260px;
+      margin-bottom: -260px;
     }
   }
 }
